feat: added all the required features

--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Analytics Dashboard - Business Intelligence Platform</title>
-    <meta name="description" content="Professional analytics dashboard for business intelligence, order management, and performance tracking" />
-    <meta name="author" content="Lovable" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <title>eCommerce Dashboard - Business Analytics Platform</title>
+    <meta name="description" content="Modern eCommerce dashboard for business analytics, order management, and performance tracking" />
+    <meta name="author" content="ByeWind" />
 
-    <meta property="og:title" content="528f6d85-8e07-4f49-9b24-efbef25d934a" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="eCommerce Dashboard - Business Analytics Platform" />
+    <meta property="og:description" content="Modern eCommerce dashboard for business analytics, order management, and performance tracking" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:title" content="eCommerce Dashboard - Business Analytics Platform" />
+    <meta name="twitter:description" content="Modern eCommerce dashboard for business analytics, order management, and performance tracking" />
   </head>
 
   <body>
